// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should not set amount on input change when value is not numeric 1`] = `
<form
  className="form input-group"
  onSubmit={[Function]}
>
  <label
    className="input-group__item"
  >
    <span
      className="sr-only"
    >
      Description
    </span>
    <input
      autoFocus={true}
      className="text-input"
      name="description"
      onChange={[Function]}
      placeholder="Description"
      type="text"
      value="Shoes"
    />
  </label>
  <label
    className="input-group__item"
  >
    <span
      className="sr-only"
    >
      Note
    </span>
    <textarea
      className="textarea"
      name="note"
      onChange={[Function]}
      placeholder="Put some note here"
      value="Too expensive"
    />
  </label>
  <label
    className="input-group__item"
  >
    <span
      className="sr-only"
    >
      Amount
    </span>
    <input
      className="text-input"
      name="amount"
      onChange={[Function]}
      placeholder="Amount"
      type="number"
      value="450"
    />
  </label>
  <label
    className="input-group__item"
  >
    <span
      className="sr-only"
    >
      Created
    </span>
    <input
      className="select"
      name="createdAt"
      onChange={[Function]}
      type="date"
      value="2020-06-14"
    />
  </label>
  <button
    className="button"
    type="submit"
  >
    Save expense
  </button>
</form>
`;

exports[`Should render ExpenseForm correctly 1`] = `
<form
  className="form input-group"
  onSubmit={[Function]}
>
  <label
    className="input-group__item"
  >
    <span
      className="sr-only"
    >
      Description
    </span>
    <input
      autoFocus={true}
      className="text-input"
      name="description"
      onChange={[Function]}
      placeholder="Description"
      type="text"
      value=""
    />
  </label>
  <label
    className="input-group__item"
  >
    <span
      className="sr-only"
    >
      Note
    </span>
    <textarea
      className="textarea"
      name="note"
      onChange={[Function]}
      placeholder="Put some note here"
      value=""
    />
  </label>
  <label
    className="input-group__item"
  >
    <span
      className="sr-only"
    >
      Amount
    </span>
    <input
      className="text-input"
      name="amount"
      onChange={[Function]}
      placeholder="Amount"
      type="number"
      value=""
    />
  </label>
  <label
    className="input-group__item"
  >
    <span
      className="sr-only"
    >
      Created
    </span>
    <input
      className="select"
      name="createdAt"
      onChange={[Function]}
      type="date"
      value="1970-01-01"
    />
  </label>
  <button
    className="button"
    type="submit"
  >
    Save expense
  </button>
</form>
`;

exports[`Should render ExpenseForm correctly with expense data 1`] = `
<form
  className="form input-group"
  onSubmit={[Function]}
>
  <label
    className="input-group__item"
  >
    <span
      className="sr-only"
    >
      Description
    </span>
    <input
      autoFocus={true}
      className="text-input"
      name="description"
      onChange={[Function]}
      placeholder="Description"
      type="text"
      value="Shoes"
    />
  </label>
  <label
    className="input-group__item"
  >
    <span
      className="sr-only"
    >
      Note
    </span>
    <textarea
      className="textarea"
      name="note"
      onChange={[Function]}
      placeholder="Put some note here"
      value="Too expensive"
    />
  </label>
  <label
    className="input-group__item"
  >
    <span
      className="sr-only"
    >
      Amount
    </span>
    <input
      className="text-input"
      name="amount"
      onChange={[Function]}
      placeholder="Amount"
      type="number"
      value="450"
    />
  </label>
  <label
    className="input-group__item"
  >
    <span
      className="sr-only"
    >
      Created
    </span>
    <input
      className="select"
      name="createdAt"
      onChange={[Function]}
      type="date"
      value="2020-06-14"
    />
  </label>
  <button
    className="button"
    type="submit"
  >
    Save expense
  </button>
</form>
`;

exports[`Should render error when required data not provided 1`] = `
<form
  className="form input-group"
  onSubmit={[Function]}
>
  <p
    className="form__error"
  >
    Please provide description and amount
  </p>
  <label
    className="input-group__item"
  >
    <span
      className="sr-only"
    >
      Description
    </span>
    <input
      autoFocus={true}
      className="text-input"
      name="description"
      onChange={[Function]}
      placeholder="Description"
      type="text"
      value=""
    />
  </label>
  <label
    className="input-group__item"
  >
    <span
      className="sr-only"
    >
      Note
    </span>
    <textarea
      className="textarea"
      name="note"
      onChange={[Function]}
      placeholder="Put some note here"
      value=""
    />
  </label>
  <label
    className="input-group__item"
  >
    <span
      className="sr-only"
    >
      Amount
    </span>
    <input
      className="text-input"
      name="amount"
      onChange={[Function]}
      placeholder="Amount"
      type="number"
      value=""
    />
  </label>
  <label
    className="input-group__item"
  >
    <span
      className="sr-only"
    >
      Created
    </span>
    <input
      className="select"
      name="createdAt"
      onChange={[Function]}
      type="date"
      value="1970-01-01"
    />
  </label>
  <button
    className="button"
    type="submit"
  >
    Save expense
  </button>
</form>
`;

exports[`Should set amount on input change 1`] = `
<form
  className="form input-group"
  onSubmit={[Function]}
>
  <label
    className="input-group__item"
  >
    <span
      className="sr-only"
    >
      Description
    </span>
    <input
      autoFocus={true}
      className="text-input"
      name="description"
      onChange={[Function]}
      placeholder="Description"
      type="text"
      value="Shoes"
    />
  </label>
  <label
    className="input-group__item"
  >
    <span
      className="sr-only"
    >
      Note
    </span>
    <textarea
      className="textarea"
      name="note"
      onChange={[Function]}
      placeholder="Put some note here"
      value="Too expensive"
    />
  </label>
  <label
    className="input-group__item"
  >
    <span
      className="sr-only"
    >
      Amount
    </span>
    <input
      className="text-input"
      name="amount"
      onChange={[Function]}
      placeholder="Amount"
      type="number"
      value="33300"
    />
  </label>
  <label
    className="input-group__item"
  >
    <span
      className="sr-only"
    >
      Created
    </span>
    <input
      className="select"
      name="createdAt"
      onChange={[Function]}
      type="date"
      value="2020-06-14"
    />
  </label>
  <button
    className="button"
    type="submit"
  >
    Save expense
  </button>
</form>
`;

exports[`Should set description on input change 1`] = `
<form
  className="form input-group"
  onSubmit={[Function]}
>
  <label
    className="input-group__item"
  >
    <span
      className="sr-only"
    >
      Description
    </span>
    <input
      autoFocus={true}
      className="text-input"
      name="description"
      onChange={[Function]}
      placeholder="Description"
      type="text"
      value="Bicycle repair"
    />
  </label>
  <label
    className="input-group__item"
  >
    <span
      className="sr-only"
    >
      Note
    </span>
    <textarea
      className="textarea"
      name="note"
      onChange={[Function]}
      placeholder="Put some note here"
      value="Too expensive"
    />
  </label>
  <label
    className="input-group__item"
  >
    <span
      className="sr-only"
    >
      Amount
    </span>
    <input
      className="text-input"
      name="amount"
      onChange={[Function]}
      placeholder="Amount"
      type="number"
      value="450"
    />
  </label>
  <label
    className="input-group__item"
  >
    <span
      className="sr-only"
    >
      Created
    </span>
    <input
      className="select"
      name="createdAt"
      onChange={[Function]}
      type="date"
      value="2020-06-14"
    />
  </label>
  <button
    className="button"
    type="submit"
  >
    Save expense
  </button>
</form>
`;

exports[`Should set note on textarea change 1`] = `
<form
  className="form input-group"
  onSubmit={[Function]}
>
  <label
    className="input-group__item"
  >
    <span
      className="sr-only"
    >
      Description
    </span>
    <input
      autoFocus={true}
      className="text-input"
      name="description"
      onChange={[Function]}
      placeholder="Description"
      type="text"
      value="Shoes"
    />
  </label>
  <label
    className="input-group__item"
  >
    <span
      className="sr-only"
    >
      Note
    </span>
    <textarea
      className="textarea"
      name="note"
      onChange={[Function]}
      placeholder="Put some note here"
      value="Better save"
    />
  </label>
  <label
    className="input-group__item"
  >
    <span
      className="sr-only"
    >
      Amount
    </span>
    <input
      className="text-input"
      name="amount"
      onChange={[Function]}
      placeholder="Amount"
      type="number"
      value="450"
    />
  </label>
  <label
    className="input-group__item"
  >
    <span
      className="sr-only"
    >
      Created
    </span>
    <input
      className="select"
      name="createdAt"
      onChange={[Function]}
      type="date"
      value="2020-06-14"
    />
  </label>
  <button
    className="button"
    type="submit"
  >
    Save expense
  </button>
</form>
`;
